methods.slug.SlugHunting.scala.code
def hunt() {
  while(!estSurBaggel){
    isFacingTrail() match{
    	case  true => avance();baisseBrosse();leveBrosse()
    	case _ => gauche()
  	}
	}
}

def isFacingTrail():Boolean = {
  if(estFaceMur){
    return false
  }else{
  avance()
  if(getCouleurSol() == Color.green){
    recule()
    return true
  } else {
    recule()
    return false
  }
    
  }
}